fix ui x scrollbar issue

--- a/web/src/app/repositories/collection/collection.component.scss
+++ b/web/src/app/repositories/collection/collection.component.scss
@@ -3,6 +3,7 @@
   width: 100%;
   margin: 0 auto;
   position: relative;
+  box-sizing: border-box;
 }
 
 .loading-overlay {
@@ -90,23 +91,23 @@
 .search-field {
   width: 100%;
   font-size: 14px;
-  
+
   ::ng-deep .mat-mdc-form-field-subscript-wrapper {
     display: none;
   }
-  
+
   ::ng-deep .mat-mdc-form-field-infix {
     padding: 8px 0;
     min-height: 36px;
     height: 36px;
     width: 200px !important;
   }
-  
+
   ::ng-deep .mat-mdc-text-field-wrapper {
     height: 40px;
     padding-right: 0;
   }
-  
+
   ::ng-deep .mat-mdc-form-field-icon-suffix {
     display: flex;
     align-items: center;
@@ -114,12 +115,12 @@
     position: absolute;
     right: 4px;
   }
-  
+
   ::ng-deep .mat-icon-button {
     width: 24px;
     height: 24px;
     line-height: 24px;
-    
+
     .mat-icon {
       font-size: 16px;
       width: 16px;
